# fiber-diagnostics

./: .env  .gitignore  API.md  Cargo.toml  LICENSE  README.md  fiber-diagnostics.db  fiber-diagnostics.db-shm  fiber-diagnostics.db-wal  seed.sql
docs/: TESTING.md
migrations/: 0001_create_monitored_nodes_and_tracked_payments.sql  0001_create_node_status_current.sql  0002_create_current_node_peer_channel_tables.sql  0003_create_current_payment_and_invoice_tables.sql  0004_create_current_graph_tables.sql  0005_create_current_issues_table.sql  0006_create_history_and_indexes.sql
src/: main.rs  payment_tracker.rs  rpc_client.rs
src/diagnostics/: engine.rs  issue.rs  mod.rs  repository.rs
src/diagnostics/rules/: asset_mismatch.rs  channel_not_ready.rs  fee_too_low.rs  insufficient_balance.rs  invoice_expired.rs  mod.rs  no_route.rs  node_down.rs  peer_offline.rs
ui/: next.config.ts  package-lock.json
ui/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
ui/src/app/nodes/: page.module.css  page.tsx
ui/src/components/: Header.module.css  Header.tsx  IssueCard.module.css  IssueCard.tsx  IssuesList.module.css  IssuesList.tsx  NetworkStats.module.css  NetworkStats.tsx  Sidebar.module.css  Sidebar.tsx  StatsBar.module.css  StatsBar.tsx  StatusIndicator.module.css  StatusIndicator.tsx
ui/src/lib/: api.ts  fixtures.ts  types.ts
